fix search-box button size on mobile fix #154

--- a/assets/sass/components/search.scss
+++ b/assets/sass/components/search.scss
@@ -145,6 +145,11 @@ The search box is a simple form which can be used to enter a search term on a se
   border-top: 1px solid $silver;
   border-bottom: 2px solid $silver;
   padding: 1em 0 1.5em 0;
+  @media only screen and (max-width: $screen-xs-max) {
+    input[type=submit] {
+      width: 100%;
+    }
+  }
 }
 
 
